dashboard/dashboard.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.k3s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 443
